tests/ui/feature-gates/feature-gate-try_blocks_heterogeneous.stderr
error[E0658]: `try bikeshed` expression is experimental
  --> $DIR/feature-gate-try_blocks_heterogeneous.rs:4:22
   |
LL |       let try_result = try bikeshed Option<_> {
   |  ______________________^
LL | |         let x = 5;
LL | |         x
LL | |     };
   | |_____^
   |
   = note: see issue #149488 <https://github.com/rust-lang/rust/issues/149488> for more information
   = help: add `#![feature(try_blocks_heterogeneous)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
